--- a/app/src/main/res/layout/bottom_sheet_address.xml
+++ b/app/src/main/res/layout/bottom_sheet_address.xml
@@ -27,7 +27,7 @@
                         android:id="@+id/current_location_text"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Current Location"
+                        android:text="@string/address_sheet_current_location"
                         android:textStyle="bold"
                         android:textSize="18sp"
                         android:textColor="@color/black"
@@ -39,7 +39,7 @@
             android:id="@+id/address_line_1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="address line 1"
+            android:hint="@string/address_sheet_address_line_1_hint"
             android:maxLines="2"
             android:backgroundTint="@color/colorPrimary"
             android:layout_below="@id/location_ll"
@@ -49,7 +49,7 @@
             android:id="@+id/address_line_2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="address line 2"
+            android:hint="@string/address_sheet_address_line_2_hint"
             android:maxLines="1"
             android:backgroundTint="@color/colorPrimary"
             android:layout_below="@id/address_line_1"
@@ -59,7 +59,7 @@
             android:id="@+id/landmark"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Landmark"
+            android:hint="@string/address_sheet_landmark_hint"
             android:maxLines="1"
             android:backgroundTint="@color/colorPrimary"
             android:layout_below="@id/address_line_2"
@@ -69,7 +69,7 @@
             android:id="@+id/pincode"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Pincode"
+            android:hint="@string/address_sheet_pincode_hint"
             android:inputType="phone"
             android:maxLength="6"
             android:backgroundTint="@color/colorPrimary"
@@ -80,7 +80,7 @@
             android:id="@+id/city"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="City"
+            android:hint="@string/address_sheet_city_hint"
             android:backgroundTint="@color/colorPrimary"
             android:layout_below="@id/pincode"
             android:layout_marginTop="20dp"
@@ -89,7 +89,7 @@
             android:id="@+id/state"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="State"
+            android:hint="@string/address_sheet_state_hint"
             android:backgroundTint="@color/colorPrimary"
             android:layout_below="@id/city"
             android:layout_marginTop="20dp"
@@ -100,7 +100,7 @@
             android:alpha="0.3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Confirm Location"
+            android:text="@string/address_sheet_confirm_location"
             android:textColor="@color/white"
             android:layout_marginHorizontal="20dp"
             android:layout_marginTop="20dp"
