--- a/app/src/main/res/layout/fragment_reg_address2.xml
+++ b/app/src/main/res/layout/fragment_reg_address2.xml
@@ -53,7 +53,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textSize="16sp"
-                    android:hint="Pincode"
+                    android:hint="@string/register_pincode_hint"
                     android:inputType="phone"
                     android:background="@drawable/textgradient"
                     android:maxLength="6"
@@ -85,7 +85,7 @@
                     android:id="@+id/address_text"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Address"
+                    android:text="@string/register_address"
                     android:textColor="#ffffff"
                     android:textSize="18sp"
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -99,7 +99,7 @@
                 android:id="@+id/next"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Next"
+                android:text="@string/register_next"
                 android:textColor="@color/white"
                 android:enabled="false"
                 android:alpha="0.3"
