--- a/app/src/main/res/layout/fragment_reg_details.xml
+++ b/app/src/main/res/layout/fragment_reg_details.xml
@@ -24,7 +24,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/reglayout"
-            android:hint="Name"
+            android:hint="@string/register_name_hint"
             android:textSize="16sp"
             android:textColor="@color/black"
             android:textColorHint="@color/grey"
@@ -46,7 +46,7 @@
             android:background="@drawable/reglayout"
             android:paddingHorizontal="15dp"
             android:paddingVertical="10dp"
-            android:hint="Alternative Mobile No."
+            android:hint="@string/register_alternate_mob_hint"
             android:inputType="phone"
             android:maxLength="10"
             android:maxLines="1"
@@ -79,7 +79,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Details"
+            android:text="@string/register_details"
             android:textColor="#ffffff"
             android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="@id/details_gradient"
@@ -103,7 +103,7 @@
             android:id="@+id/next"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Next"
+            android:text="@string/register_next"
             android:textColor="@color/white"
             android:background="@drawable/roundbutton"
             android:enabled="false"
