--- a/app/src/main/res/layout/fragment_reg_photo.xml
+++ b/app/src/main/res/layout/fragment_reg_photo.xml
@@ -33,7 +33,7 @@
             android:id="@+id/next"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Next"
+            android:text="@string/register_next"
             android:paddingHorizontal="30dp"
             android:textColor="@color/white"
             android:layout_marginTop="40dp"
@@ -51,7 +51,7 @@
             android:id="@+id/skip"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Skip"
+            android:text="@string/register_skip"
             android:textColor="@color/grey"
             android:layout_marginLeft="10dp"
             android:padding="10dp"
@@ -72,7 +72,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
-            android:text="Profile Photo"
+            android:text="@string/register_profile_photo"
             android:textColor="@color/white"
             android:textSize="23sp"
             app:layout_constraintBottom_toBottomOf="parent"
