--- a/app/src/main/res/layout/sell_crops_item_layout.xml
+++ b/app/src/main/res/layout/sell_crops_item_layout.xml
@@ -88,7 +88,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:textSize="13sp"
-            android:text="Add To Cart"
+            android:text="@string/add_to_cart"
             android:layout_toRightOf="@+id/cart"
             android:layout_marginLeft="7dp"
             android:layout_centerInParent="true"
