--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -56,7 +56,7 @@
                                 android:id="@+id/address"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:text="Locating..."
+                                android:text="@string/locating"
                                 android:textStyle="bold"
                                 android:onClick="onClickLocation"
                                 android:textSize="16sp"
