--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -26,7 +26,7 @@
             android:layout_marginVertical="10dp"
             android:background="@drawable/searchbar_back"
             android:elevation="10dp"
-            app:defaultQueryHint="Search"
+            app:defaultQueryHint="@string/search_query_hint"
             app:iconifiedByDefault="false"
             app:queryBackground="@drawable/searchbar_back" />
     </RelativeLayout>
@@ -62,7 +62,7 @@
                 android:id="@+id/title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="FreshHut"
+                android:text="@string/search_toolbar_title"
                 android:textSize="20sp"
                 android:textStyle="bold"
                 android:textColor="@color/white"
