--- a/app/src/main/res/layout/activity_sell.xml
+++ b/app/src/main/res/layout/activity_sell.xml
@@ -27,7 +27,7 @@
             android:layout_marginVertical="10dp"
             android:background="@drawable/searchbar_back"
             android:elevation="10dp"
-            app:defaultQueryHint="Search"
+            app:defaultQueryHint="@string/sell_query_hint"
             app:iconifiedByDefault="false"
             app:queryBackground="@drawable/searchbar_back" />
     </RelativeLayout>
@@ -62,7 +62,7 @@
                 android:id="@+id/title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Sell Products"
+                android:text="title"
                 android:textSize="18sp"
                 android:textColor="@color/white"
                 android:layout_centerInParent="true"/>
