--- a/app/src/main/res/layout/activity_verify_otp.xml
+++ b/app/src/main/res/layout/activity_verify_otp.xml
@@ -34,7 +34,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="FRESH"
+            android:text="@string/otp_title_part_1"
             android:textColor="@color/colorPrimary"
             android:textSize="50dp"
             android:shadowColor="#29000000"
@@ -43,7 +43,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text=" HAAT"
+            android:text="@string/otp_title_part_2"
             android:textColor="@color/grey"
             android:textSize="50dp"
             android:shadowColor="#29000000"
@@ -62,7 +62,7 @@
         android:alpha="0.3"
         android:paddingHorizontal="10dp"
         android:textAllCaps="false"
-        android:text="Verify"
+        android:text="@string/otp_verify"
         android:onClick="verify"
         android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -89,7 +89,7 @@
         android:id="@+id/resend_otp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Resend OTP"
+        android:text="@string/otp_resend"
         android:textColor="@color/colorPrimary"
         android:textStyle="bold"
         android:onClick="resendOTP"
