--- a/app/src/main/res/layout/bottom_sheet_change_quantity.xml
+++ b/app/src/main/res/layout/bottom_sheet_change_quantity.xml
@@ -42,7 +42,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/quantity"
         android:inputType="number"
-        android:hint="Quantity"
+        android:hint="@string/change_quantity_quantity_hint"
         android:maxLength="3"
         android:textSize="16sp"
         android:layout_marginTop="15dp"
@@ -56,7 +56,7 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="15dp"
         android:layout_below="@id/image_card"
-        android:text="Done"
+        android:text="@string/change_quantity_sheet_done"
         android:layout_marginTop="5dp"
         android:layout_marginBottom="10dp"
         android:textColor="@color/white"
