--- a/app/src/main/res/layout/fragment_reg_address1.xml
+++ b/app/src/main/res/layout/fragment_reg_address1.xml
@@ -25,7 +25,7 @@
                 android:layout_height="wrap_content"
                 android:maxLines="2"
                 android:background="@drawable/reglayout"
-                android:hint="Address Line 1"
+                android:hint="@string/register_address_line_1_hint"
                 android:textSize="16sp"
                 android:paddingVertical="10dp"
                 android:paddingHorizontal="15dp"
@@ -46,7 +46,7 @@
                 android:maxLines="2"
                 android:background="@drawable/reglayout"
                 android:textColor="@color/black"
-                android:hint="Address Line 2"
+                android:hint="@string/register_address_line_2_hint"
                 android:textSize="16sp"
                 android:textColorHint="@color/grey"
                 android:layout_marginHorizontal="25dp"
@@ -66,7 +66,7 @@
                 android:maxLines="1"
                 android:background="@drawable/reglayout"
                 android:textColor="@color/black"
-                android:hint="Landmark (Optional)"
+                android:hint="@string/register_landmark_hint"
                 android:textSize="16sp"
                 android:textColorHint="@color/grey"
                 android:paddingHorizontal="15dp"
@@ -97,7 +97,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Address"
+                android:text="@string/register_address"
                 android:textColor="@color/white"
                 android:textSize="18sp"
                 app:layout_constraintBottom_toBottomOf="@id/address_gradient"
@@ -121,7 +121,7 @@
                 android:id="@+id/next"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Next"
+                android:text="@string/register_next"
                 android:textColor="@color/white"
                 android:background="@drawable/roundbutton"
                 android:enabled="false"
@@ -158,7 +158,7 @@
                     android:id="@+id/location_textview"
                     android:layout_width="wrap_content"
                     android:layout_height="22dp"
-                    android:text="Your Location"
+                    android:text="@string/register_your_location"
                     android:textColor="#0eb095"
                     android:textSize="15sp"
                     android:layout_marginLeft="5dp"/>
