--- a/app/src/main/res/layout/sell_crops_item_layout_grid.xml
+++ b/app/src/main/res/layout/sell_crops_item_layout_grid.xml
@@ -87,7 +87,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:textSize="13sp"
-            android:text="Add To Cart"
+            android:text="@string/add_to_cart"
             android:layout_centerInParent="true"
             android:textColor="@color/white"
             android:gravity="center"/>
