--- a/app/src/main/res/layout/activity_select_crop.xml
+++ b/app/src/main/res/layout/activity_select_crop.xml
@@ -69,23 +69,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/roundbutton"
-            android:text="Next"
+            android:text="@string/select_crops_next"
             android:alpha="0.3"
             android:onClick="nextWork"
             android:enabled="false"
             android:visibility="invisible"
             android:textColor="@color/white" />
-        <TextView
-            android:id="@+id/skip"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Skip"
-            android:onClick="skipWork"
-            android:enabled="false"
-            android:visibility="invisible"
-            android:textColor="@color/grey"
-            android:layout_gravity="center_vertical"
-            android:layout_marginLeft="20dp"/>
+
 
     </LinearLayout>
 
